Bug 509461 - "Malformed url" error when trying to rename a file located on desktop via file conflict dialog
Summary: "Malformed url" error when trying to rename a file located on desktop via fil...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.4.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Akseli Lahtinen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-13 15:38 UTC by Patrick Silva
Modified: 2026-06-04 16:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-09-13 15:38:27 UTC
STEPS TO REPRODUCE
1. set your desktop do folder view layout
2. copy two files of the same type to desktop
3. try to rename one of the two files using the same name as the other file that you copied to desktop - file conflict dialog shows up
4. click on "Suggest new name" and then "Rename" buttons

OBSERVED RESULT
"Malformed url" error

EXPECTED RESULT
the file is renamed

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2025-09-17 17:10:18 UTC
Can reproduce.
Comment 2 Akseli Lahtinen 2026-05-26 13:38:14 UTC
Can still repro this

Operating System: KDE Linux 2026-05-26
KDE Plasma Version: 6.7.80
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 3 Bug Janitor Service 2026-06-01 11:19:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3767
Comment 4 Bug Janitor Service 2026-06-01 15:02:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/2252
Comment 5 Akseli Lahtinen 2026-06-03 10:02:34 UTC
Git commit 07cb635012552165fc41d77dbbf89f8184aeded8 by Akseli Lahtinen.
Committed on 03/06/2026 at 09:54.
Pushed by akselmo into branch 'master'.

KDirModel: Use mostLocalUrl for old url

When renaming files on desktop layer, the fileItem url can
be something like "desktop:/"

In those cases we want to look for the mostLocalUrl and
use that as our oldUrl instead, since it resolves
the url properly.

M  +4    -2    src/widgets/kdirmodel.cpp

https://invent.kde.org/frameworks/kio/-/commit/07cb635012552165fc41d77dbbf89f8184aeded8