Desktop: Fix malformed url error, utilize KIO MoveAs for renaming

Previously we were modifying the name of the file directly in the model,
instead of running it properly through KIO. This caused an issue where
KIO could not resolve the location of the local file properly, as it
does not handle "desktop:/" format.

Instead, rely on KIO to do the renaming, and listen for it's signal
for updating the file position. This will make the rename function
more robust.

We also had errorneously added a trailing slash for all items on the desktop
in desktopschemehelper, which made helper consumers think even files were folders.
Give the helper a way to omit trailing slash when it's known it's not needed.

BUG: 509461